--- a/metadata.yaml
+++ b/metadata.yaml
@@ -3,5 +3,5 @@
     "desc": "通过第三方api，实现手办化、cos化等等功能",
     "author": "shskjw",
     "repo": "https://github.com/shskjw/astrbot_plugin_shoubanhua",
-    "version": "v1.1.0"
+    "version": "1.2.0"
 }
