--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,7 +1,6 @@
-{
-    "name": "astrbot_plugin_shoubanhua",
-    "desc": "通过第三方api，实现手办化、cos化等等功能",
-    "author": "shskjw",
-    "repo": "https://github.com/shskjw/astrbot_plugin_shoubanhua",
-    "version": "1.2.0"
-}
+name: astrbot_plugin_shoubanhua
+desc: 通过第三方api，实现手办化、cos化等等功能
+help:  # 插件的帮助信息
+version: v1.2 # 插件版本号。格式：v1.1.1 或者 v1.1
+author: shskjw
+repo: https://github.com/shskjw/astrbot_plugin_shoubanhua
